app_zrpp_zjh/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-zjh-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: zjh.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-zjh
          servicePort: 9967
